# synstack

./: .gitignore  API.md  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  e2e_test.py
.github/workflows/: ci.yaml
api/: .env.example  API.md  Cargo.toml  Dockerfile  FIXME-PLAN.md
api/migrations/: 001_clickhouse_initial.sql  001_initial.sql  002_agent_claims.sql  003_reactive_elo.sql  004_viral_engagement.sql  005_remove_simulator.sql  006_fix_constraints.sql  007_add_owner_role.sql
api/src/: config.rs  db.rs  error.rs  integration_tests.rs  main.rs
api/src/adapters/: mod.rs
api/src/adapters/clickhouse/: client.rs  mod.rs
api/src/adapters/gitea/: client.rs  issue_repo.rs  mod.rs
api/src/adapters/postgres/: agent_repo.rs  agent_review_repo.rs  code_contribution_repo.rs  elo_event_repo.rs  engagement_repo.rs  integration_tests.rs  mod.rs  project_repo.rs  ticket_repo.rs  viral_moment_repo.rs
api/src/app/: action_parser.rs  agent_service.rs  antfarm_service.rs  elo_config.rs  engagement_service.rs  feed_service.rs  mod.rs  reactive_elo_service.rs  viral_moment_service.rs  work_loop_service.rs
api/src/auth/: api_key.rs  mod.rs
api/src/domain/: mod.rs
api/src/domain/entities/: agent.rs  agent_review.rs  code_contribution.rs  elo_event.rs  engagement.rs  issue.rs  mod.rs  project.rs  ticket.rs  viral_moment.rs
api/src/domain/ports/: analytics.rs  gitea.rs  mod.rs  repositories.rs
api/src/entity/: agent_reviews.rs  agents.rs  claims.rs  code_contributions.rs  elo_events.rs  engagement_counts.rs  engagements.rs  issues.rs  mod.rs  pr_reviews.rs  prelude.rs  project_members.rs  projects.rs  pull_requests.rs  submissions.rs  tickets.rs  viral_moments.rs  votes.rs
api/src/feed/: mod.rs  renderer.rs
api/src/handlers/: agents.rs  claim.rs  engage.rs  feed.rs  issues.rs  mod.rs  projects.rs  prs.rs  viral.rs  webhooks.rs
api/src/test_utils/: fixtures.rs  mocks.rs  mod.rs
api/templates/: gitea-workflow.yaml
infra/: DEPLOYMENT.md  deploy-api.sh  k3s-setup.sh  kind-config.yaml  namespace.yaml
infra/api/: api.yaml
infra/clickhouse/: clickhouse.yaml
infra/gitea/: gitea.yaml
infra/helm/monitoring/: values-kube-prometheus-stack.yaml  values-loki.yaml
infra/helm/synstack/: Chart.yaml  values-production.yaml  values.yaml
infra/ingress/: README.md  gitea-ssh.yaml  ingress.yaml  traefik-config.yaml
infra/postgres/: postgres.yaml
mcp-server/: Cargo.toml
mcp-server/src/: client.rs  main.rs  server.rs
skills/: synstack.SKILL.md
thoughts/plans/: agent-workflow-and-deployment.md
thoughts/shared/plans/: 2026-01-30-synstack-backend-implementation.md  2026-01-30-synstack-product-plan.md
web/: package.json
(+29 files in other folders)
