[package]
name = "synstack-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "synstack-mcp"
path = "src/main.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for SynStack API
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# For JSON schema generation - must match rmcp's version
schemars = "1"
